# air-agent

./: .gitignore  README.md  README_zh.md  pyproject.toml
docs/: air-agent-roadmap.md  suggestion-from-deepseek.md
docs/superpowers/plans/: 2026-05-15-skills-support.md  2026-05-31-v0.3-observability-reliability.md  2026-06-03-v0.4-multi-model-provider.md  2026-06-04-v0.3-skills-tracing.md  2026-06-10-v0.5-memory-system-mvp.md  2026-06-15-v0.6-plan-execute.md  2026-06-15-v0.7-multi-agent-collaboration.md  2026-06-29-skills-use-skill-tool.md  2026-06-29-v0.8-plugin-registry.md
docs/superpowers/specs/: 2026-05-15-skills-support-design.md  2026-06-04-v0.3-skills-tracing-design.md
src/air_agent/: __init__.py  agent.py  config.py  memory.py  planner.py  plugins.py  subagent.py  tracing.py  types.py
src/air_agent/mcp/: __init__.py
src/air_agent/providers/: __init__.py  openai.py  types.py
src/air_agent/skills/: __init__.py  manager.py  router.py  skill.py
src/air_agent/tools/: __init__.py  registry.py
src/air_agent/tools/builtin/: __init__.py  _permissions.py  config.py  file_tools.py  shell_tools.py
tests/: test_agent.py  test_builtin_tools.py  test_config.py  test_memory.py  test_openai_provider.py  test_planner.py  test_plugins.py  test_provider_types.py  test_skills.py  test_streaming.py  test_subagent.py  test_tools.py  test_tracing.py  test_types.py
