[project]
name = "air-agent"
version = "0.1.3"
description = "Lightweight Python AI agent with OpenAI tool calling, MCP support, and parallel subagents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.36.0",
    "mcp>=1.27.1",
    "pydantic>=2.13.4",
]

[project.urls]
"Repository" = "https://github.com/chldu2000/air-agent"

[dependency-groups]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=1.0",
    "pytest-cov>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
